infra/kserve/02-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: kserve-ingress-gateway
  namespace: kserve
spec:
  gatewayClassName: envoy
  addresses:
  - type: IPAddress
    value: "192.168.77.203"
  listeners:
    - name: http
      protocol: HTTP
      port: 7080
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 7443
      tls:
        mode: Terminate
        certificateRefs:
          - name: kserve-wildcard-cert
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
  infrastructure:
    labels:
      serving.kserve.io/gateway: kserve-ingress-gateway
